--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
+.app-container {
+  width: 100%;
+  height: 100%;
+  min-width: 100vw;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  background-color: #212B36;
+  align-items: center;
+  background-color: #212b36;
 }
